# common-rs

./: .gitignore  Cargo.toml  Justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
base/: Cargo.toml
base/src/: lib.rs
base/src/app/: axum.rs  cron.rs  mod.rs  server.rs
base/src/context/: metainfo.rs  mod.rs  request_id.rs  task_local.rs  thread_local.rs  types.rs
base/src/context/trace/: mod.rs
base/src/context/trace/layout/: json.rs  mod.rs  record.rs  text.rs
base/src/error/: convert.rs  err_code.rs  mod.rs
base/src/id_gen/: mod.rs  uniq_id.rs
base/src/jwt/: jwt.rs  mod.rs  model.rs
base/src/log_id/: gen_log_id.rs  mod.rs
base/src/middle/: global_404.rs  log_id.rs  mod.rs  request_timer.rs  trace.rs
base/src/param/: extract.rs  http.rs  mod.rs
base/src/password/: bcrypt_encoder.rs  mod.rs
base/src/util/: conf.rs  mod.rs
derive/: Cargo.toml
derive/examples/: error.rs
derive/src/: lib.rs
derive/src/biz_err_derive/: mod.rs  model.rs  my_error.rs
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/cache/: cache.rs  client.rs  mod.rs
infra/src/cache/operation/: generic_op.rs  local_cache.rs  local_on_redis_cache.rs  manager.rs  mod.rs  redis_cache.rs
infra/src/casbin_auth/: mod.rs  rbac_model.conf
infra/src/casbin_auth/adapter/: action.rs  adapter.rs  entity.rs  migration.rs  mod.rs
infra/src/dbop/: conn.rs  dbop.rs  mod.rs
